<resources>
    <string name="app_name">Talklet</string>
    <string name="action_settings">Settings</string>
    <string name="please_connect_to_talklet">Please connect to Talklet</string>
    <string name="connect_with_facebook">connect with facebook</string>
    <string name="title_fill_details">Please fill out the details about your kid.  We will not share this info with anyone.</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="confirm">Confirm</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="schedule_recordings">Schedule recordings</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="website">Website(?)</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--facebook-->
    <!--<string name="facebook_app_id">796713693824727</string>-->
    <!--<string name="fb_login_protocol_scheme">fb796713693824727</string>-->
<!--This is what I got from the following:
C:\Program Files\Git\usr\bin>keytool -exportcert -alias YOUR_RELEASE_KEY_ALIAS -keystore YOUR_RELEASE_KEY_PATH | openssl sha1 -binary | openssl base64
-->
    <!--<string name="facebook_app_id">1968945033319882</string>-->
    <!--<string name="fb_login_protocol_scheme">fb1968945033319882</string>-->

    <!--This app id is the one I (Ruben) have control over. It can be set at: https://developers.facebook.com/apps/217220582154957/dashboard/-->
    <string name="facebook_app_id">217220582154957</string>
    <string name="fb_login_protocol_scheme">fb217220582154957</string>

    <!--MainScreen-->
    <string name="total_words">Total words</string>
    <string name="zero_start_progress_bar_value">0</string>
    <string name="progress_bar_value" formatted="false">%1s / %2s</string>
    <string name="word_count" formatted="false">%d / %d</string>


    <!--Tabs Titles-->
    <string name="tab_title_general">General</string>
    <string name="tab_title_data">Data</string>
    <string name="past_recordings">Past Recordings</string>
    <string name="by_date">By date</string>
    <string name="by_recording">By recording</string>


    <!--ChildModel General-->
    <string name="recording_text" formatted="false">| Record %d | %1s | %d:%d | %4s | </string>
    <string name="record_num" formatted="false">Record %d</string>
    <string name="record_details" formatted="false">| %d:%d | %s |</string>
    <string name="words_details" formatted="false">Unique: %d  |  New: %d  |  Advance: %d</string>
    <string name="words_counter" formatted="false">%d /nwords</string>

    <string name="words_chart" formatted="false">%.0f / %d\nwords</string>
    <string name="words">words</string>
    <string name="about_you">About you</string>
    <string name="add_another_kid">Add another kid</string>

    <!--Setting fragment-->
    <string name="about_kid">About %s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="i_speak_another_language">+ I speak another language</string>
    <string name="about_you_title">About you</string>

    <!--by recording-->
    <string name="words_num">%d words</string>
    <string name="english">English</string>
    <string name="second_language">Second Language</string>
    <string name="first_language">First Language</string>
    <string name="third_language">Third Language</string>
    <string name="your_favorite_words">Your Favorite Words</string>
    <string name="view_all_words">View All Words</string>

    <!--favorites-->
    <string name="favorites_title">Words</string>
    <string name="new_word">+  New word</string>
    <string name="new_word_open">-  New word</string>
    <string name="frequency">Frequency</string>
    <string name="age">Age</string>
    <string name="advance_word">+  Advance word</string>
    <string name="advance_word_open">-  Advance word</string>
    <string name="other_word">+  Other word</string>
    <string name="other_word_open">-  Other word</string>
    <string name="close_all_words">Close All Words</string>
    <string name="age_value">%d M</string>
    <string name="talklet_word_de_jour">Talklet Word de Jour</string>
    <string name="a_new_word_every_day_for_your_baby_s_brain">A new word every day for your baby’s brain</string>
    <string name="word_subtext" formatted="false">%d%% of %d month olds use this word</string>


    <!--about baby-->
    <string name="upload_new_photo">Upload new photo</string>
    <string name="please_select_at_least_one_child_to_begin_recording">Please select at least one child to begin recording.</string>
    <string name="info">Info</string>
    <string name="questions">Questions</string>
    <string name="activities">Activities</string>
    <string name="our_faves">Our Faves</string>


    <!--SideMenu-->
    <string name="talklet_website">http://www.google.com</string>


</resources>
