<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <group android:checkableBehavior="single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <item
            android:id="@+id/schedule_recordings_item"
            android:title="@string/schedule_recordings"
            android:layout_height="66dp"
            android:layout_width="wrap_content"
            android:icon="@drawable/schedule"
            />
        <item
            android:id="@+id/setting_item"
            android:title="@string/setting"
            android:layout_height="66dp"
            android:layout_width="wrap_content"
            android:icon="@drawable/setting"/>
        <item
            android:id="@+id/notification_item"
            android:title="@string/notification"
            android:layout_height="66dp"
            android:layout_width="wrap_content"
            android:icon="@drawable/notification"/>
        <item
            android:id="@+id/website_item"
            android:title="@string/website"
            android:layout_height="66dp"
            android:layout_width="wrap_content"
            android:icon="@drawable/web"/>
        <item
            android:id="@+id/logout_item"
            android:title="@string/log_out"
            android:layout_height="66dp"
            android:layout_width="wrap_content"
            android:icon="@drawable/log"/>
        <item
            android:id="@+id/help"
            android:title="@string/help"
            android:layout_height="66dp"
            android:layout_width="wrap_content"
            android:icon="@drawable/setting"/>
    </group>


</menu>

