<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_color">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        android:background="@drawable/edit_text_line"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:hint="@string/first_name"
        android:paddingBottom="10dp"/>



    <EditText
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        android:layout_marginTop="31dp"
        android:background="@drawable/edit_text_line"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:hint="@string/last_name"
        android:paddingBottom="10dp"/>


    <TextView
        android:id="@+id/birthday_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        android:layout_marginTop="31dp"
        android:background="@drawable/edit_text_line"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:hint="@string/birthday"
        android:paddingBottom="10dp"
        android:drawableEnd="@drawable/schedule"
        android:clickable="true"/>


    <TextView
        android:id="@+id/first_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_text_view"
        android:layout_marginTop="31dp"
        android:background="@drawable/edit_text_line"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:hint="@string/first_language"
        android:paddingBottom="10dp"
        android:drawableEnd="@drawable/triangle2"/>

    <TextView
        android:id="@+id/second_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_language"
        android:layout_marginTop="31dp"
        android:background="@drawable/edit_text_line"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:hint="@string/second_language"
        android:paddingBottom="10dp"
        android:drawableEnd="@drawable/triangle2"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/third_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_language"
        android:layout_marginTop="31dp"
        android:background="@drawable/edit_text_line"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:hint="@string/third_language"
        android:paddingBottom="10dp"
        android:drawableEnd="@drawable/triangle2"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/another_language_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_language"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="31dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:text="@string/i_speak_another_language"
        android:textColor="@color/colorPrimary"/>




</android.support.constraint.ConstraintLayout>