<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingPrefix">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/primary_background_color"
            app:layout_constraintStart_toStartOf="@+id/favorite_words_title"
            app:layout_constraintEnd_toEndOf="@+id/favorite_words_title"
            app:layout_constraintTop_toTopOf="@+id/favorite_words_title"
            app:layout_constraintBottom_toTopOf="@+id/view_all_words"/>

        <TextView
            android:id="@+id/favorite_words_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/your_favorite_words"
            android:drawableTop="@drawable/faivorite"
            android:drawablePadding="10dp"
            android:gravity="center_horizontal"
            fontPath="fonts/Avenir-Black.ttf"
            android:textSize="16sp"
            android:textColor="@color/Light_sea_green"
            android:layout_marginTop="30dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:paddingBottom="10dp"
            android:paddingTop="13dp"/>

        <TextView
            android:id="@+id/saparator"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/darker_background_color"
            app:layout_constraintStart_toStartOf="@+id/favorite_words_title"
            app:layout_constraintEnd_toEndOf="@+id/favorite_words_title"
            app:layout_constraintTop_toBottomOf="@+id/favorite_words_title"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/favorites_words_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintStart_toStartOf="@+id/favorite_words_title"
            app:layout_constraintEnd_toEndOf="@+id/favorite_words_title"
            app:layout_constraintTop_toBottomOf="@+id/saparator"/>

        <com.maatayim.talklet.screens.mainactivity.childinfo.favorites.favwords.CustomWordSection
            android:id="@+id/new_words_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:wordSectionTitle="@string/new_word"
            app:wordSectionTitleOpen="@string/new_word_open"
            android:background="@color/darker_background_color"
            app:layout_constraintStart_toStartOf="@+id/favorite_words_title"
            app:layout_constraintEnd_toEndOf="@+id/favorite_words_title"
            app:layout_constraintTop_toBottomOf="@+id/favorites_words_rv"
            android:visibility="gone"/>



        <com.maatayim.talklet.screens.mainactivity.childinfo.favorites.favwords.CustomWordSection
            android:id="@+id/advance_words_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:wordSectionTitle="@string/advance_word"
            app:wordSectionTitleOpen="@string/advance_word_open"
            android:background="@color/darker_background_color"
            app:layout_constraintStart_toStartOf="@+id/favorite_words_title"
            app:layout_constraintEnd_toEndOf="@+id/favorite_words_title"
            app:layout_constraintTop_toBottomOf="@+id/new_words_section"
            android:visibility="gone"/>


        <com.maatayim.talklet.screens.mainactivity.childinfo.favorites.favwords.CustomWordSection
            android:id="@+id/other_words_section"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:wordSectionTitle="@string/other_word"
            app:wordSectionTitleOpen="@string/other_word_open"
            android:background="@color/darker_background_color"
            app:layout_constraintStart_toStartOf="@+id/favorite_words_title"
            app:layout_constraintEnd_toEndOf="@+id/favorite_words_title"
            app:layout_constraintTop_toBottomOf="@+id/advance_words_section"
            android:visibility="gone"/>


        <TextView
            android:id="@+id/view_all_words"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/favorite_words_title"
            app:layout_constraintEnd_toEndOf="@+id/favorite_words_title"
            app:layout_constraintTop_toBottomOf="@+id/other_words_section"
            android:text="@string/view_all_words"
            android:padding="10dp"
            android:drawableStart="@drawable/menu_dark_grey"
            android:drawablePadding="10dp"
            fontPath="fonts/Avenir-Black.ttf"
            android:background="@color/darker_background_color"
            android:drawableLeft="@drawable/menu_dark_grey" />


        <TextView
            android:id="@+id/new_words_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_all_words"
            android:text="@string/talklet_word_de_jour"
            android:textSize="16sp"
            android:textColor="@color/Light_sea_green"
            android:gravity="center_horizontal"
            fontPath="fonts/Avenir-Black.ttf"
            android:layout_marginTop="20dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_words_title"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/a_new_word_every_day_for_your_baby_s_brain" />

        <android.support.v4.view.ViewPager
            android:id="@+id/words_view_pager"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/white_bg"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>