<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/primary_background_color">

    <View
        android:id="@+id/section_title_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/new_words_section_title"
        android:background="@color/favorites_bg"
        android:layout_marginBottom="2dp"/>


    <TextView
        android:id="@+id/new_words_section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:padding="10dp"
        android:text="@string/new_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="7dp"
        />

    <TextView
        android:id="@+id/word_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        android:padding="10dp"
        android:layout_marginEnd="15dp"
        android:layout_toLeftOf="@+id/new_word_age"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/new_word_age"/>

    <TextView
        android:id="@+id/new_word_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:padding="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_words"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_words_section_title"
        android:visibility="gone"
        />


    <View
        android:id="@+id/saparator12"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/columns_saparator"
        app:layout_constraintEnd_toStartOf="@+id/word_frequency"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view_words"/>


    <View
        android:id="@+id/saparator23"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/columns_saparator"
        app:layout_constraintStart_toEndOf="@+id/word_frequency"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view_words"/>



</android.support.constraint.ConstraintLayout>